<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	
	<parent>
        <groupId>datalife.mydata</groupId>
		<artifactId>mydata-root</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
	
	<modelVersion>4.0.0</modelVersion>
	<artifactId>mydata-mvvmfx</artifactId>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.test.skip>false</maven.test.skip>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
		</dependency>
		<dependency>
			<groupId>eu.lestard</groupId>
			<artifactId>assertj-javafx</artifactId>
		</dependency>
		<dependency>
			<groupId>com.querydsl</groupId>
			<artifactId>querydsl-sql</artifactId>
		</dependency>
		<dependency>
			<groupId>eu.lestard</groupId>
			<artifactId>advanced-bindings</artifactId>
		</dependency>
		<dependency>
			<groupId>eu.lestard</groupId>
			<artifactId>doc-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>net.jodah</groupId>
			<artifactId>typetools</artifactId>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.cedarsoft.commons</groupId>
			<artifactId>test-utils</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- DS lib -->
		<dependency>
			<groupId>datalife.ds</groupId>
			<artifactId>ds-common</artifactId>
		</dependency>
		<dependency>
			<groupId>datalife.ds</groupId>
			<artifactId>ds-data-core</artifactId>
		</dependency>
		<dependency>
			<groupId>datalife.ds</groupId>
			<artifactId>ds-ui</artifactId>
		</dependency>
		<dependency>
			<groupId>datalife.ds</groupId>
			<artifactId>ds-sqlite</artifactId>
		</dependency>
		<dependency>
			<groupId>datalife.ds</groupId>
			<artifactId>ds-condition</artifactId>
		</dependency>

		<!-- CDI  -->
		<dependency>
			<groupId>org.jboss.weld.se</groupId>
			<artifactId>weld-se-core</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.enterprise</groupId>
			<artifactId>jakarta.enterprise.cdi-api</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>
		
		<!-- Test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>20</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<argLine>
						--module-path D:\DEV\my-data\javafx-sdk-20.0.1\lib
						--add-modules javafx.controls,javafx.fxml
						--add-opens java.base/java.lang=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<!-- Default configuration for running -->
						<!-- Usage: mvn clean javafx:run -->
						<id>default-cli</id>
						<configuration>
							<mainClass>datalife.ds.mydata.App</mainClass>
						</configuration>
					</execution>
					<execution>
						<!-- Configuration for manual attach debugging -->
						<!-- Usage: mvn clean javafx:run@debug -->
						<id>debug</id>
						<configuration>
							<options>
								<option>
									-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
							</options>
							<mainClass>datalife.ds.mydata.App</mainClass>
						</configuration>
					</execution>
					<execution>
						<!-- Configuration for automatic IDE debugging -->
						<id>ide-debug</id>
						<configuration>
							<options>
								<option>
									-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
							</options>
							<mainClass>datalife.ds.mydata.App</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
